# libexact

./: CMakeLists.txt  README.md
app/: app.m.cpp
exact/: exact_cell.cpp  exact_cell.h  exact_cellholder.cpp  exact_cellholder.h  exact_heap.cpp  exact_heap.h  exact_nonmovingmarksweep.cpp  exact_nonmovingmarksweep.h  exact_reference.cpp  exact_reference.h  exact_root.cpp  exact_root.h  exact_typeerasedheap.cpp  exact_typeerasedheap.h
